--- a/readme.html
+++ b/readme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr">
 	<head>
-		<title>Blood Frontier: Home</title>
+		<title>Blood Frontier, It's Bloody Fun!</title>
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 		<link rel="shortcut icon" href="docs/favicon.ico" />
 		<link rel="stylesheet" type="text/css" href="docs/site.css" />
