mac build updates
Former-commit-id: 1c62a18eeadf9e1615452d9305786dbfc8d939d1

--- a/src/xcode/help/index.html
+++ b/src/xcode/help/index.html
@@ -12,7 +12,7 @@
 </div>
 
 <ul>
-<li><a href="readme.txt">Readme</a>
+<li><a href="readme.html">Blood Frontier Documentation</a>.
 <li><a href="http://bloodfrontier.com/Main_Page">Blood Frontier</a> The Game Homepage.
 </ul>
 <ul>
