crypto endian backport, xcode project fixes (s/sauerbraten/bloodfrontier/)
Former-commit-id: 62e1c9765c7a1bac2a9bb371dd6b03a0d8e83e7a

--- a/src/xcode/help/index.html
+++ b/src/xcode/help/index.html
@@ -13,13 +13,13 @@
 
 <ul>
 <li><a href="readme.html">Blood Frontier Documentation</a>.
-<li><a href="http://bloodfrontier.com/Main_Page">Blood Frontier</a> The Game Homepage.
+<li><a href="http://www.bloodfrontier.com/">Blood Frontier</a> The Game Homepage.
 </ul>
 <ul>
-<li><a href="http://sauerbraten.org/">Sauerbraten</a>: The Engine Homepage.
+<li><a href="http://sauerbraten.org/">Cube 2</a>: The Engine Homepage.
 <li><a href="http://quadropolis.us/">Quadropolis</a>: User made maps, mods, and scripts.
 <li><a href="http://www.cubeengine.com/forum.php4">Official forum</a>: Search for the answers to your questions first.
-<li><a href="irc://uk.quakenet.org/#sauerbraten">IRC channel</a>: Chat with experienced users and the devs.
+<li><a href="irc://irc.freenode.net/#bloodfrontier">IRC channel</a>: Chat with experienced users and the devs.
 </ul>
 
 </body>
