--- a/readme.html
+++ b/readme.html
@@ -29,6 +29,8 @@
 			#footer a { color: #CC0000; text-decoration: none; }
 			#footer a:visited { color: #CC0000; text-decoration: none; }
 			#footer a:hover { color: #FF0000; text-decoration: underline; }
+			#copyright { font-size: 11px; color: #FFFFFF; padding: 24px 0px 16px 0px; }
+			#copyright p { margin: 0px; padding: 4px 0px 0px 0px; }
 			#sflogo { margin: 0px 32px; float: right; padding: 0px; }
 			#video { background: url(src/site/bits/bg_vid.jpg) no-repeat center center; margin: 0px; padding: 0px; float: left; height: 469px; width: 738px; }
 			#video object { margin: 0px; padding: 0px; }
@@ -95,12 +97,16 @@
 			</div>
 
 			<div id="footer">
-					<div id="sflogo">
-						<a href="http://www.bloodfrontier.com/project">
-							<img src="http://sflogo.sourceforge.net/sflogo.php?group_id=198419&amp;type=11" alt="Get Blood Frontier at SourceForge" title="Get Blood Frontier at SourceForge" width="120" height="30" border="0" id="sflogo"/>
-						</a>
-					</div>
+				<div id="sflogo">
+					<a href="http://www.bloodfrontier.com/project">
+						<img src="http://sflogo.sourceforge.net/sflogo.php?group_id=198419&amp;type=11" alt="Get Blood Frontier at SourceForge" title="Get Blood Frontier at SourceForge" width="120" height="30" border="0" id="sflogo"/>
+					</a>
+				</div>
 				<a href="http://www.bloodfrontier.com/download">Download</a>, <a href="http://www.bloodfrontier.com/wiki">Learn More</a>, <a href="http://www.bloodfrontier.com/forums">Get Help</a>, or <a href="http://www.bloodfrontier.com/chat">Join In</a> today!
+				<div id="copyright">
+					<p>Blood Frontier, Copyright (C) 2006-2009 Anthony Cord, Quinton Reeves, Lee Salzman</p>
+					<p>Cube Engine 2, Copyright (C) 2001-2009 Wouter van Oortmerssen, Lee Salzman, Mike Dysart, Robert Pointon, and Quinton Reeves</p>
+				</div>
 			</div>
 
 		</div>
